Move match profile validation to a service layer